tests/snapshots/zed__zed_default_explain.snap
---
source: tests/zed.rs
expression: "support::stderr_text(&output)"
---
terminal configuration does not indicate a Nerd Font
