tests/snapshots/zed__zed_default_json.snap
---
source: tests/zed.rs
expression: "support::stdout_json_snapshot(&output)"
---
{
  "confidence": "certain",
  "config_path": "<SCENARIO_HOME>/zed-default/.config/zed/settings.json",
  "detected": false,
  "font": "Monaco",
  "profile": null,
  "source": "terminal_config",
  "terminal": "zed"
}
