tests/snapshots/zed__zed_malformed_explain.snap
---
source: tests/zed.rs
expression: "support::stderr_text_normalized(&output, &[])"
---
failed to read terminal configuration: failed to parse <SCENARIO_HOME>/zed-malformed/.config/zed/settings.json at line 1 column 1
