tests/snapshots/zed__zed_malformed_json.snap
---
source: tests/zed.rs
expression: "support::stdout_json_snapshot(&output)"
---
{
  "confidence": "certain",
  "config_path": "<SCENARIO_HOME>/zed-malformed/.config/zed/settings.json",
  "detected": null,
  "error_reason": "failed to parse <SCENARIO_HOME>/zed-malformed/.config/zed/settings.json at line 1 column 1",
  "font": null,
  "profile": null,
  "source": "config_error",
  "terminal": "zed"
}
