tests/snapshots/zed__zed_nerd_font_buffer_explain.snap
---
source: tests/zed.rs
expression: "support::stderr_text(&output)"
---
terminal configuration indicates a Nerd Font is active
