tests/snapshots/zed__zed_nerd_font_buffer_json.snap
---
source: tests/zed.rs
expression: "support::stdout_json_snapshot(&output)"
---
{
  "confidence": "certain",
  "config_path": "<SCENARIO_HOME>/zed-nerd-font-buffer/.config/zed/settings.json",
  "detected": true,
  "font": "JetBrainsMono Nerd Font",
  "profile": null,
  "source": "terminal_config",
  "terminal": "zed"
}
